# VoxCPM.cpp

./: .gitignore  CLAUDE.md  README.md  README_zh.md
.github/workflows/: build-windows.yml
docs/: TEST_SETUP.md  audio_vae_conv_transpose_microkernel_design_zh.md  audio_vae_ggml_operator_investigation_zh.md  audiovae_performance_investigation.md  imatrix_calibration_dataset_zh.tsv  imatrix_calibration_guide.md  minicpm_model_design.md  minicpm_model_design_plan.md  quant_pre.md  repository_split_bootstrap_zh.md  torch_to_ggml_experience_zh.md  torch_to_ggml_migration_guide_editorial_review_zh.md  torch_to_ggml_migration_guide_zh.md  voxcpm_audio_vae_plan.md  voxcpm_batching_feasibility_review_zh.md  voxcpm_cpp_backend.md  voxcpm_decode_refactor_summary_zh.md  voxcpm_localdit_unified_plan.md  voxcpm_localenv_plan.md  voxcpm_runtime_optimization_report_zh.md  voxcpm_shared_weight_store_refactor.md  voxcpm_torch_to_ggml_complete_refactor_cookbook_zh.md  voxcpm_zero_dependency_feasibility_review_zh.md
examples/: voxcpm_tts.cpp
include/voxcpm/: backend.h  localenc.h  minicpm.h  voxcpm.h
src/: audio-vae.cpp  backend.cpp  localenc.cpp  minicpm.cpp  voxcpm.cpp
tests/: CMakeLists.txt  test_audio_vae.cpp  test_components.cpp  test_config.h  test_fixture.h  test_fsq.cpp  test_localenc.cpp  test_locdit.cpp  test_minicpm.cpp  test_tokenizer.cpp  test_unified_cfm.cpp  test_voxcpm.cpp
